# Hope-Os

./: .gitignore  CHANGELOG.md  CLAUDE_TOOLS_COLLECTION.md  CONTRIBUTING.md  Cargo.toml  PUBLISHING.md  README.md  SECURITY.md  build.rs  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  architecture.md  modules.md
hope-entity/: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
hope-entity/examples/: self_repair_demo.rs  silent_teacher_demo.rs  simple.rs
hope-entity/src/: bench.rs  entity.rs  lib.rs  main.rs  native_inference.rs  ollama_bridge.rs  self_repair.rs  silent_teacher.rs
proto/: hope.proto
python/hope_os/: __init__.py
python_client/: .env.example  app.py  brain.py  brain_eyes.py  demo.py  genesis.py  regenerate_proto.py  requirements.txt  start_hope.bat  test_recall.py  test_vision.py
scripts/: publish-crates.bat  publish-crates.sh  publish-pypi.bat  publish-pypi.sh
src/: lib.rs  main.rs  python.rs
src/core/: aware.rs  error.rs  identity.rs  mod.rs  registry.rs
src/data/: code_graph.rs  mod.rs  neuroblast.rs  store.rs
src/grpc/: client.rs  mod.rs  server.rs
src/modules/: agents.rs  alan.rs  attention.rs  aware.rs  code_dna.rs  collective.rs  consciousness.rs  context_builder.rs  distributed.rs  dream.rs  emotion_engine.rs  genome.rs  geolocation.rs  heart.rs  hebbian.rs  memory.rs  mod.rs  navigation.rs  personality.rs  pollinations.rs  resonance.rs  skills.rs  soul.rs  swarm.rs  templates.rs  vision.rs  voice.rs
tests/: test_hope.py
